--- a/apps/Settings/res/values/strings.xml
+++ b/apps/Settings/res/values/strings.xml
@@ -3154,6 +3154,9 @@ found in the list of installed applications.</string>
     <string name="increasing_ring_interval_3seconds">3 seconds</string>
     <string name="increasing_ring_interval_5seconds">5 seconds</string>
     <string name="increasing_ring_interval_10seconds">10 seconds</string>
+
     <!--String set for data control-->
+    <string name="Data_Control">Data Control</string>
+    <string name="Data_Control_Summary">Control when your phone can access data, can save battery life.</string>
     <string name="Data_Control_Enable">Enable</string>
 </resources>
